--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,129 @@
 img {
   height: 20px;
 }
+body {
+  box-sizing: border-box;
+  font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
+  font-size: 12px;
+  color: #666;
+}
+
+/* NAV */
+
+nav {
+  width: 980px;
+  height: 36px;
+  margin: auto;
+  border: 1px solid #666;
+  border-radius: 3px
+}
+
+nav ul {
+  display: flex;
+  height: 100%;
+}
+nav li {
+  flex: 1;
+  display: flex;
+  text-align: center;
+  border-right: 1px solid #666;
+  padding-right: 1px;
+  padding-left: 1px;
+  background-color: #aaa;
+}
+nav li:first-child {
+  padding-left: 0;
+}
+nav li:last-child {
+  flex: 0 130px;
+  border-right: 0;
+  padding-right: 0;
+}
+nav li a,
+nav li form {
+  flex-basis: 100%;
+  display: flex;
+  align-items: center;
+  background: linear-gradient(#777, #777 50%, #999 50%, #999);
+  text-decoration: none;
+}
+nav li a {
+  color: white;
+  font-weight: bold;
+}
+nav li a:hover {
+  background: linear-gradient(#555, #555 50%, #666 50%, #666);
+}
+nav li:first-child a {
+  background: url("../images/apple.png") 50% 50% no-repeat, linear-gradient(#777, #777 50%, #999 50%, #999);
+}
+nav li:first-child a:hover {
+  background: url("../images/apple.png") 50% 50% no-repeat, linear-gradient(#555, #555 50%, #666 50%, #666);
+}
+nav li:first-child a,
+nav li:first-child a:hover {
+  background-size: 18px;
+}
+nav li span {
+  display: block;
+  width: 100%;
+}
+nav li input {
+  width: 85px;
+  margin: auto;
+  padding-left: 20px;
+  border-radius: 10px;
+  border: none;
+  box-shadow: 0 2px 1px inset #444;
+  font-size: 12px;
+  background: url("../images/magnifying-glass.png") 4px 80% no-repeat, linear-gradient(#777, #777 50%, #aaa 50%, #aaa);
+  background-size: 12px;
+}
+
+/*
+url(../images/apple.png) 50% 50% 20px no-repeat
+<nav>
+  <ul>
+    <li><a href="link.html"><img src="images/apple.png" alt="Apple-logo"></a></li>
+    <li><a href="link.html">Store</a></li>
+    <li><a href="link.html">Mac</a></li>
+    <li><a href="link.html">iPod</a></li>
+    <li><a href="link.html">iPhone</a></li>
+    <li><a href="link.html">iPad</a></li>
+    <li><a href="link.html">iTunes</a></li>
+    <li><a href="link.html">Support</a></li>
+    <li>
+      <form>
+        <input type="text" name="search">
+      </form>
+    </li>
+  </ul>
+</nav>
+/* HEADER */
+
+header {
+  max-width: 1500px;
+  min-width: 1000px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 3px;
+  background-color: rgb(255, 255, 225);
+}
+.hero {
+  grid-column: 1 / -1;
+  background-color: rgb(255, 240, 211);
+}
+.iphone-s {
+  background-color: rgb(228, 255, 228);
+}
+.explore {
+  background-color: rgb(255, 212, 212);
+}
+
+/* FOOTER */
+
+footer {
+  margin: 30px;
+  background-color: rgb(224, 224, 255);
+}
